--- a/styles/scss/common/index.scss
+++ b/styles/scss/common/index.scss
@@ -1,6 +1,5 @@
 @import 'base.scss';
 @import 'preloader';
-@import 'pagination';
 @import 'tabs';
 @import 'borders';
-@import 'datepicker';
+@import 'nav-links';
